--- a/main.tex
+++ b/main.tex
@@ -296,9 +296,9 @@ The diagram is divided into Client, Server, and Shared folders. The Shared packa
 Figure~\ref{fig:server_component_diagram} illustrates the server-side component architecture. Controllers provide API endpoints for frontend services, with each controller communicating with its corresponding service layer through well-defined interfaces. Services encapsulate the core business logic including game mechanics, user tracking, and account management. These services interact with other necessary services or repositories as needed. Data access is handled through repositories that abstract database operations.
 
 
-\textbf{Component Diagram to Class Diagram Mapping}
+\textbf{Server Component Diagram to Class Diagram Mapping}
 
-The following outlines the mapping between components from a component diagram and corresponding classes in a class diagram, organized by their respective subsystems or folders:
+The following outlines the mapping between components from a server component diagram and corresponding classes in a class diagram, organized by their respective subsystems or folders:
 \begin{enumerate}[label=\textbf{\arabic*.}, ref=\arabic*]
     \item \textbf{Services}
         \begin{enumerate}[label=\textbf{\alph*.}, ref=\theenumi.\alph*]
@@ -405,6 +405,8 @@ The following outlines the mapping between components from a component diagram a
         \end{itemize}
 \end{enumerate}
 
+
+Wl
 
 
 \begin{figure}[H]
@@ -627,44 +629,71 @@ performance visibility, enhancing user privacy options.
 \section{Traceability}
 
 \begin{table}
-\begin{tabular}{|l|l|}
+\begin{tabular}{|p{0.35\textwidth}|p{0.6\textwidth}|}
 \hline
 \multicolumn{1}{|c|}{\textbf{Use Cases}}    & \multicolumn{1}{|c|}{\textbf{Coverage}}                   \\ \hline
 \multicolumn{2}{|c|}{\textbf {Figure~\ref{fig:use_case_account} Account Use Case} }                                          \\ \hline
-Log in& Figure~\ref{fig:user_authentication_state}\\
-Sign up& \\
-Log out& Figure~\ref{fig:user_authentication_state}\\
+Log in& Figure~\ref{fig:user_authentication_state} - \textit{Shows state transitions between authenticated and unauthenticated states, including login process}\\
+\hline
+Sign up& \textit{Not explicitly covered in the diagrams}\\
+\hline
+Log out& Figure~\ref{fig:user_authentication_state} - \textit{Shows transition from authenticated to unauthenticated state during logout}\\
 \hline
 \multicolumn{2}{|c|}{\textbf {Figure~\ref{fig:use_case_game_page} Game Page Use Case} }                                      \\
 \hline
-Start game& \\
-Change Difficulty& \\
+Start game& \textit{Not explicitly covered in the diagrams}\\
+\hline
+Change Difficulty& \textit{Not explicitly covered in the diagrams}\\
 \hline
 \multicolumn{2}{|c|}{\textbf {Figure~\ref{fig:use_case_high_score} High Score Module Use Case} }                                         \\
 \hline
-View shortened game statistics& Figure~\ref{fig:score_fetching_state} Figure~\ref{fig:united_package} Figure~\ref{fig:client_components} \\
-View graph of game statistics& Figure~\ref{fig:score_fetching_state} Figure~\ref{fig:united_package} Figure~\ref{fig:client_components} \\
-View timeline of played games& Figure~\ref{fig:score_fetching_state} Figure~\ref{fig:united_package} Figure~\ref{fig:client_components} \\
-View game statistics by difficulty& Figure~\ref{fig:score_fetching_state} Figure~\ref{fig:united_package} Figure~\ref{fig:client_components} \\
+View shortened game statistics& Figure~\ref{fig:score_fetching_state} - \textit{Handles asynchronous score retrieval and display process}\newline 
+Figure~\ref{fig:client_components} - \textit{Details frontend components for displaying statistics} \\
+\hline
+View graph of game statistics& Figure~\ref{fig:score_fetching_state} - \textit{Fetches score data for graphical representation}\newline
+Figure~\ref{fig:client_components} - \textit{Shows UI components for graph rendering} \\
+\hline
+View timeline of played games& Figure~\ref{fig:score_fetching_state} - \textit{Retrieves historical score data for timeline display}\newline
+Figure~\ref{fig:client_components} - \textit{Details components for timeline visualization} \\
+\hline
+View game statistics by difficulty& Figure~\ref{fig:score_fetching_state} - \textit{Handles filtered score data by difficulty level}\newline
+Figure~\ref{fig:client_components} - \textit{Includes filter components for statistics display} \\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+\begin{tabular}{|p{0.35\textwidth}|p{0.6\textwidth}|}
 \hline
 \multicolumn{2}{|c|}{\textbf {Figure~\ref{fig:use_case_navigation} Page Navigation Use Case} }                          \\
 \hline
-Go to home page (game selection)& Figure~\ref{fig:class_diagram}Figure~\ref{fig:united_package} Figure~\ref{fig:client_components}\\
-Go to account page& Figure~\ref{fig:class_diagram}Figure~\ref{fig:united_package} Figure~\ref{fig:client_components}\\
-Go to statistics page& Figure~\ref{fig:class_diagram}Figure~\ref{fig:united_package} Figure~\ref{fig:client_components}\\
-Go to settings page& Figure~\ref{fig:class_diagram}Figure~\ref{fig:united_package} Figure~\ref{fig:client_components}\\
+Go to home page (game selection)& Figure~\ref{fig:class_diagram} - \textit{Shows page relationships including HomePage component}\newline
+Figure~\ref{fig:client_components} - \textit{Shows UI routing components}\\
+\hline
+Go to account page& Figure~\ref{fig:class_diagram} - \textit{Shows AccountPage component and relationships}\newline
+Figure~\ref{fig:client_components} - \textit{Shows account page components}\\
+\hline
+Go to statistics page& Figure~\ref{fig:class_diagram} - \textit{Shows StatisticsPage component and relationships}\newline
+Figure~\ref{fig:client_components} - \textit{Details statistics page UI components}\\
+\hline
+Go to settings page& Figure~\ref{fig:class_diagram} - \textit{Shows SettingsPage component and relationships}\newline
+Figure~\ref{fig:client_components} - \textit{Shows settings page UI components}\\
 \hline
 \multicolumn{2}{|c|}{\textbf {Figure~\ref{fig:use_case_game_selection} Game Selection Use Case} }           \\
 \hline
-Play "Aim Trainer"& Figure~\ref{fig:aim_trainer_state}\\
-Play "Math Game"& Figure~\ref{fig:math_state}\\
-Play "Pair Up"& Figure~\ref{fig:pair_up_state}\\
-Play "Sudoku"& Figure~\ref{fig:sudoku_state}\\
+Play "Aim Trainer"& Figure~\ref{fig:aim_trainer_state} - \textit{Details game states and transitions for the Aim Trainer game}\\
 \hline
-\multicolumn{2}{|c|}{\textbf {Figure~\ref{fig:use_case_account} Account Settings Use Case} }   \\
+Play "Math Game"& Figure~\ref{fig:math_state} - \textit{Shows states and transitions for the Math Game}\\
 \hline
-Privatize High Score& \\
-Make High Score Public& \\
+Play "Pair Up"& Figure~\ref{fig:pair_up_state} - \textit{Illustrates memory matching game states and logic flow}\\
+\hline
+Play "Sudoku"& Figure~\ref{fig:sudoku_state} - \textit{Details puzzle game states and user interactions}\\
+\hline
+\multicolumn{2}{|c|}{\textbf {Figure~\ref{fig:use_case_settings} Account Settings Use Case} }   \\
+\hline
+Privatize High Score& \textit{Not explicitly covered in the diagrams}\\
+\hline
+Make High Score Public& \textit{Not explicitly covered in the diagrams}\\
 \hline
 \end{tabular}
 
@@ -674,7 +703,7 @@ Make High Score Public& \\
 
 \vspace{8pt} % value to increase the gap
 
-\textbf{Note:} The current system architecture does not follow or implement user needs and requirements highlighted in yellow. All other unmarked requirements and user needs are either mentioned in the system or have some form of implementation that can be checked. Unmarked columns are mentioned in the system architecture diagrams.
+\textbf{Note:} The current system architecture does not fully implement some user needs and requirements as indicated. Use cases marked with \textit{"Not explicitly covered in the diagrams"} indicate architectural elements that may need additional documentation or implementation. All other requirements have corresponding architectural components as detailed above.
 \end{table}
 
 
